fix no overflow table

--- a/repositoryviewer/src/styles/App.css
+++ b/repositoryviewer/src/styles/App.css
@@ -297,6 +297,7 @@ main
 {
     flex-grow: 1;
     padding-left: 250px;
+    width: 100%;
 }
 
 
